Fix pom.xml so it can create an executable .jar